<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding12dp"
    android:paddingEnd="@dimen/padding12dp"
    tools:context=".ui.create.kelas.ClassFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_image_class"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tingkatLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin36dp"
        app:layout_constraintTop_toBottomOf="@id/image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tingkat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/tingkat"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/padding12dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namaKelasLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintTop_toBottomOf="@id/tingkatLay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namaKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/namaKelas"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/padding12dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kompetesiKeahlianLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintTop_toBottomOf="@id/namaKelasLay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kompetesiKeahlian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/kompetesiKeahlian"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/padding12dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:contentPadding="6dp"
        app:layout_constraintEnd_toEndOf="@id/kompetesiKeahlianLay"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kompetesiKeahlianLay"
        app:layout_constraintWidth_percent="0.25">

        <TextView
            android:id="@+id/textOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buat"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>