<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding12dp"
        android:paddingEnd="@dimen/padding12dp"
        android:paddingBottom="@dimen/padding24dp"
        tools:context=".ui.pembayaran.fragment.PembayaranFragment">


        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petugasLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin36dp"
            app:layout_constraintTop_toBottomOf="@id/image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:enabled="false"
                android:layout_centerVertical="true"
                android:hint="@string/petugas"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/padding12dp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/siswalay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            app:layout_constraintTop_toBottomOf="@id/petugasLay">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding12dp"
                android:text="@string/nama_siswa" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spSiswa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding12dp"
                android:textColor="#2E2E2E" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            app:layout_constraintTop_toBottomOf="@id/siswalay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/idSpp"
                android:importantForAutofill="no"
                android:enabled="false"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/padding12dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/datelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            app:layout_constraintTop_toBottomOf="@id/spplay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:inputType="text"
                android:enabled="false"
                android:maxLines="1"
                android:padding="@dimen/padding12dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tunggakLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            app:layout_constraintTop_toBottomOf="@id/datelay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tunggak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/tunggak"
                android:importantForAutofill="no"
                android:inputType="text"
                android:enabled="false"
                android:maxLines="1"
                android:padding="@dimen/padding12dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jumlahLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            app:layout_constraintTop_toBottomOf="@id/tunggakLay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/jumlah_bayar"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/padding12dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginBottom="@dimen/margin16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp"
            app:contentPadding="6dp"
            app:layout_constraintEnd_toEndOf="@id/jumlahLay"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jumlahLay"
            app:layout_constraintWidth_percent="0.25">

            <TextView
                android:id="@+id/textOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bayar"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>