<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingStart="@dimen/padding12dp"
    android:paddingEnd="@dimen/padding12dp"
    tools:context=".ui.login.fragment.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:drawable="@android:drawable/editbox_background_normal"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/padding12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8dp"
            android:backgroundTint="@color/white"
            android:drawable="@android:drawable/editbox_background_normal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:contentPadding="6dp"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintWidth_percent="0.25">

        <TextView
            android:id="@+id/textOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSiswa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/selectedColor"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:contentPadding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siswa"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnPetugas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="#BBE1FA"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:contentPadding="6dp"
        app:layout_constraintBottom_toBottomOf="@id/btnSiswa"
        app:layout_constraintEnd_toStartOf="@id/btnAdmin"
        app:layout_constraintStart_toEndOf="@id/btnSiswa"
        app:layout_constraintTop_toTopOf="@id/btnSiswa"
        app:layout_constraintWidth_percent="0.25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/petugas"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/unSelect"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:contentPadding="6dp"
        app:layout_constraintBottom_toBottomOf="@id/btnSiswa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnSiswa"
        app:layout_constraintWidth_percent="0.25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>